--- a/Config.toml
+++ b/Config.toml
@@ -1,11 +1,4 @@
-[database]
-host = "127.0.0.1"
-port = 3306
-name = "test"
-username = "root"
-password = "root"
-
-[development]
+[debug]
 address = "0.0.0.0"
 port = 8000
 workers = 32
@@ -15,3 +8,10 @@ write_timeout = 5
 log = "debug"
 #secret_key = [randomly generated at launch]
 limits = { forms = 32768 }
+
+[debug.database]
+host = "127.0.0.1"
+port = 3306
+name = "test"
+username = "root"
+password = "root"
