Using SQLX for Migrations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 rocket = "0.5.0"
 serde = "1.0.193"
+serde_json = "1.0.108"
 figment = "0.10.12"
-toml = "0.8.8"
-mysql = "24.0.0"
+sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio", "migrate"] }
 password-hash = "0.5.0"
 log = "0.4.20"
