--- a/Config.toml
+++ b/Config.toml
@@ -9,5 +9,6 @@ limits = { forms = 32768 }
 [debug.database]
 host = "127.0.0.1"
 port = 3306
-username = "root"
-password = "root"
+username = "pr"
+password = "pr"
+database = "pocket_rocket"
