--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 rocket = "0.5.0"
+rocket_db_pools = { version = "0.1.0", features = ["sqlx_mysql"] }
 serde = "1.0.193"
 serde_json = "1.0.108"
 figment = "0.10.12"
